Fix spacing of header menu

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -945,6 +945,10 @@ li {
     padding: 10px;
   }
 
+  .navbar-right {
+    margin-right: 0;
+  }
+
   footer {
     .navbar-text {
       margin-left: 0;
